--- a/LogService/src/main/resources/static/DLogin/comprobar.html
+++ b/LogService/src/main/resources/static/DLogin/comprobar.html
@@ -15,6 +15,22 @@
     <div style="margin-left: 2%;">
         <h1 class="text-danger">Autorizado</h1>
     </div>
+    <div class="card" style="width: 47%; margin-bottom: 2%;">
+        <div class="card-body">
+            <div class="mb-3">
+                <label class="form-label">Username:</label>
+                <input id="idnumero" type="text" class="form-control"  name="txtname" placeholder="numero">
+            </div>
+            <button id="Button1" class="btn btn-danger" onclick="Services.login(idusermame.value, Passwordid.value)"> atan </button>
+            <button id="Button2" class="btn btn-danger" onclick="Services.login(idusermame.value, Passwordid.value)"> sqrt </button>
+
+        </div>
+
+        <div >
+            <h5 id="servicio">El resultado matematico es: </h5>
+        </div>
+
+    </div>
     <hr>
 </main>
 <script src="js/app.js"></script>
